frontend/test/typecheck/error/higher-order.fc
extern void printf(char[], ...);

int retFive() {
    return 5;
}

int main() {
    printf("%d\n", retFive);
    return 0;
}
